# CompilerConstruction

cabal/: CCO3874389N5597250CCO.cabal
cabal/Documents/: typesystem.tex
cabal/Documents/haddock/: CCO-Diag-Base.html  CCO-Diag-Parser.html  CCO-Diag.html  doc-index.html  mini_CCO-Diag-Base.html  mini_CCO-Diag-Lexer.html  mini_CCO-Diag-Parser.html
cabal/src/: build.sh  compile.sh  printed.ilg  printed.tex  voorbeeld.tex
cabal/src/CCO/Diag/AG/: Base.ag
cabal/src/CCO/Picture/: AG.ag  Base.hs
cabal/src/CCO/Picture/AG/: Translate.ag  Translate.ag.orig
fun-0.0.8.0/examples/: t1.lam  test1.lam
fun-0.0.8.0/src/: hm2cr.hs  parsed.bl  printed.bl  run.sh  translated.bl
fun-0.0.8.0/src/CCO/AG/: HM.ag
fun-0.0.8.0/src/CCO/Core/: AG.ag  AG.hs  Base.hs
fun-0.0.8.0/src/CCO/Core/AG/: Hm2Cr.ag
fun-0.0.8.0/src/CCO/HM/: AG.ag  AG.hs  Parser.hs
fun-0.0.8.1/: README  Team a.docx  build.sh  fun.cabal  fun0081.cabal
fun-0.0.8.1/examples/: 3args.lam  allThreePrim.lam  assignment2.lam  calculation.lam  checkList.lam  compile.sh  cons.lam  cons.tcrr  corrprinted.tcrr  functionInList.lam  head.tcrr  ifLambdaIf.lam  ifexample.tcrr  ifexamplecorrect.tcrr  parsed.lam  parsed.lam.orig  printed-correct-version.tcrr  printed.tcrr  printed.tcrr.orig  printed2.tcrr  shadowing.lam  simple.lam  simplerecursion.lam  t10.lam  t2.lam  t2.tcrr  t3.lam  t4.lam  t4.lam.orig  t5.lam  t5.lam.orig  t6.lam  t6.lam.orig  t7.lam  t8.lam  t9.lam  tail.tcrr  test1.lam  test1.tcrr  translated.lam  (+2 more)
fun-0.0.8.1/examples/extra/: parsed.lam  parsed.lam.orig  printed.tcrr  printed.tcrr.orig  translated.lam  translated.lam.orig
fun-0.0.8.1/src/: ParseHM.hs  PpCore.hs  compile.sh  haakjes.out  hm2cr.hs  parsed.bl  printed.bl  run.sh  translated.bl
fun-0.0.8.1/src/CCO/: HM.hs
fun-0.0.8.1/src/CCO/AG/: AHM.ag  AHM.ag.orig  Core.ag  Core.ag.orig  HM.ag
fun-0.0.8.1/src/CCO/Core/: AG.ag  AG.hs  AG.hs.orig  Base.hs  EnvMap.hs
fun-0.0.8.1/src/CCO/Core/AG/: BuildIn.ag  EnvMap.ag  Hm2Cr.ag  Hm2Cr.ag.orig  ToANormal.ag  ToCoreRun.ag  ToCoreRun.ag.orig
fun-0.0.8.1/src/CCO/HM/: AG.ag  AG.hs  AG.hs.orig  Base.hs  Lexer.hs  Lexer.hs.orig  Parser.hs  Parser.hs.orig
fun-0.0.8.1/src/CCO/HM/AG/: ToANormal.ag  ToANormal.ag.orig
mf/: README.txt
mf/Documentation/: EmbellishedConstantPropagation.odt  StrongLiveVariableAnalysis.odt
mf/examples/: ._fib.c  .~lock.StrongLiveVariableAnalysis.odt#  Analysis slv.docx  cp1.c  doublesquare.c  example-cp1.test  example1.c  example1.c.orig  example2.c  example3.c  example4.c  example5.c  examples6.c  factorial.c  fib.c
mf/examples/cp/: cp1.c  cp2.c  cp3.c  cp4.c  fib.c
mf/examples/slv/: Analyze  slv1.c  slv2.c  slv3.c  slv4.c  slv5.c
mf/src/: Administration.ag  Administration.hs  All.ag  All.hs  Analysis.hs  Analysis.hs.orig  AttributeGrammar.ag  AttributeGrammar.hs  ConstantPropagation.hs  ConstantPropagation.hs.orig  Dev.hs  Dev.hs.orig  EmbellishedConstantPropagation.hs  Lexer.hs  Lexer.hs.orig  Lexer.x  LiveVariableAnalysis.hs  LiveVariableAnalysis.hs.orig  MonotoneFramework.hs  Parser.hs  Parser.hs.orig  Parser.y  Test.hs  build.sh  clean.sh  output.txt  output.txt.orig  ppAnalyse.hs  ppAnalyse.hs.orig  readme.txt
mf/src/Monotone/: Analysis.hs  ConstantPropagation.hs  EmbellishedConstantPropagation.hs  LiveVariableAnalysis.hs  MonotoneFramework.hs
mf/src/View/: PpAdministration.hs  PpAnalysis.hs  PpConstantPropagation.hs  PpEmbellishedConstantPropagation.hs  PpHelper.hs  PpLiveVariableAnalysis.hs  PpLiveVariableAnalysis.hs.orig  View.hs
tdiagrams/: Makefile  build.sh  compile.sh  readme.txt  tdiagrams.cabal
tdiagrams/Documents/: Typesystem.hs  documentation.tex  henk.docx  type-system.tex  typesystem.tex
tdiagrams/Documents/Delete later/: typesystem.tex  untitled-2.tex  untitled-3.tex
tdiagrams/Documents/Delete later/Backup correct and illtypes/: typesystem.tex
tdiagrams/Documents/haddock/: CCO-Diag-Lexer.html  CCO-Picture-Base.html  CCO-Picture.html  mini_CCO-Diag-AG.html  mini_CCO-Picture-AG.html  mini_CCO-Picture-Base.html
tdiagrams/Grading/: .~lock.B-grading.odt#  A-grading.odt  B-grading.odt  Grading - group b.docx
tdiagrams/src/: ParseTDiag.hs  TCDiag.hs  TDiag2Picture.hs  TypeCDiag.hs  build.sh  compile.sh  error1.bl  error2.bl  error3.bl  error4.bl  error5.bl  error6.bl  error7.bl  error8.bl  error9.bl  example1.bl  example2.bl  example3.bl  example4.bl  examplesTypeInfo.txt  in.bl  in.dbl  in1.bl  input1.bl  out.dbl  parsed.bl  parsein.bl  parseout.bl  ppPrinter.tex  ppout.bl  print.tex  printed.bl  printed.ilg  printed.tex  tdin.bl  tdout.bl  test.ag  test.hs  test.txt  testInput.txt  (+5 more)
tdiagrams/src/CCO/: Diag.hs
tdiagrams/src/CCO/Diag/: AG.ag  AG.hs  Base.hs
tdiagrams/src/CCO/Diag/AG/: Base.ag  Pos.ag  Typing.ag  Typing.hs
tdiagrams/src/CCO/Picture/: AG.ag  AG.hs  AG.hs.orig  Base.hs
tdiagrams/src/CCO/Picture/AG/: Translate.ag  Translate.ag.orig
tdiagrams/src/haddock/: CCO-Diag-AG.html  CCO-Picture-AG.html  compile.sh  doc-index.html  index-frames.html  index.html  mini_CCO-Diag.html  mini_CCO-Picture.html
tdiagrams/src/test/src/: in1.bl
tdiagrams/src/test/src/CCO/ArithBool/: AG.hs
