name:                  CCO3874389N5597250CCO
version:               0.0.5.0
synopsis:              Project b - t
description:           This is package contains the t-diagram assignment of the course Compiler Construction developed by Ferdinand van Walree en Matthew Swart 
license:               AllRightsReserved
license-file:          LICENSE
category:              Education
author:                Ferdinand van Walree(3874389) en Matthew Swart(5597250)
maintainer:            m.a.swart@students.uu.nl
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Cco/MiniProjects
tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1
build-type:            Simple
cabal-version:         >= 1.8
extra-source-files:    AUTHORS, Makefile, src/CCO/Diag/AG.ag,
                       src/CCO/Diag/AG/Base.ag, src/CCO/Picture/AG.ag,
                       src/CCO/Picture/AG/Base.ag, 
                       src/CCO/Picture/AG/Printing.ag, readme.txt,  
                       src/build.sh, src/compile.sh, src/CCO/Picture/Translate.ag,
                       src/CCO/Diag/Ag/Typing.ag, src/CCO/Diag/Ag/Pos.ag,
                       src/CCO/Diag.ag



executable parse-tdiag
  main-is:             ParseTDiag.hs
  build-depends:       base, uu-cco >= 0.1.0.1
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser
  hs-source-dirs:      src

executable TypeCDiag
  main-is:             TypeCDiag.hs
  build-depends:       base, uu-cco >= 0.1.0.1
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser
  hs-source-dirs:      src

executable TDiag2Picture
  main-is:             TDiag2Picture.hs
  build-depends:       base, uu-cco >= 0.1.0.1
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src

executable pp-picture
  main-is:             PpPicture.hs
  build-depends:       base, uu-cco >= 0.1.0.1
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src
