name:                CCO3874389N5597250CCO
version:             0.1.0.0
synopsis:            Project b of the course Compiler Construction
description:         This package contains project b t-diagram of the course Compiler onstruction developed by Ferdinand(3874389) van Walree en Matthew Swart(5597250)
license:             GPL-2
license-file:        LICENSE
author:              Ferdinand van Walree(3874389) Matthew Swart(5597250)
maintainer:          m.a.swart@students.uu.nl
-- copyright:           
build-type:          Simple
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:    AUTHORS, Makefile, src/CCO/Diag/AG.ag,
                       src/CCO/Diag/AG/Base.ag, src/CCO/Picture/AG.ag,
                       src/CCO/Picture/AG/Base.ag, 
                       src/CCO/Picture/AG/Printing.ag, readme.txt,  
                       src/build.sh, src/compile.sh, src/CCO/Picture/Translate.ag,
                       src/CCO/Diag/Ag/Typing.ag, src/CCO/Diag/Ag/Pos.ag,
                       src/CCO/Diag.ag


executable parse-tdiag
  main-is:             ParseTDiag.hs
  build-depends:       base, uu-cco >= 0.1.0.1
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser
  hs-source-dirs:      src
  default-language:    Haskell2010

executable TypeCDiag
  main-is:             TypeCDiag.hs
  build-depends:       base, uu-cco >= 0.1.0.1
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser
  hs-source-dirs:      src
  default-language:    Haskell2010

executable TDiag2Picture
  main-is:             TDiag2Picture.hs
  build-depends:       base, uu-cco >= 0.1.0.1
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src
  default-language:    Haskell2010

executable pp-picture
  main-is:             PpPicture.hs
  build-depends:       base, uu-cco >= 0.1.0.1
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src
  default-language:    Haskell2010
